<project xmlns="https://maven.apache.org/POM/4.0.0"
	xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>ai.covia</groupId>
	<artifactId>covia</artifactId>
	<version>0.0.2-SNAPSHOT</version>
	<packaging>pom</packaging>

	<properties>
		<maven.compiler.release>21</maven.compiler.release>
		<maven.compiler.source>21</maven.compiler.source>
		<junit.version>6.1.0</junit.version>
		<convex.version>0.8.5</convex.version>
		<maven.compiler.target>21</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		
		<logback.version>1.5.18</logback.version>
		<slf4j.version>2.0.17</slf4j.version>
		<hc.version>5.5</hc.version>
		<javalin.version>6.7.0</javalin.version>
		<langchain.version>1.16.2</langchain.version>
		<mcp.version>0.13.0</mcp.version>
		<a2a.version>1.0.0.Beta1</a2a.version>
	</properties>

	<modules>
		<module>workbench</module>
		<module>venue</module>
		<module>covia-core</module>
	</modules>

	<build>
		<plugins>
			<!-- Use this to require a minimum Maven version -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.6.3</version>
				<executions>
					<execution>
						<id>enforce-maven</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>3.7</version>
								</requireMavenVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>